# riftgym

./: .gitignore  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
src/riftgym/: __init__.py
src/riftgym/_data/: GameInfo-multilane5.json
src/riftgym/env/: lol_env.py  lol_gym.py  multilane.py  protocol.py  rewards.py  session.py
src/riftgym/launcher/: __init__.py  affinity.py  server_launcher.py
src/riftgym/lib/: encoding.py  lane_spots.py
src/riftgym/run_configs/: __init__.py  _docker.py  compose.py  container.py  lib.py
src/riftgym/sb3/: __init__.py  policy.py  snapshot_pool.py  thread_vec_env.py  trainer.py
tests/integration/: _stub_compose.yaml  test_compose_eval_smoke.py  test_compose_plumbing.py  test_eval_smoke.py
tests/unit/: test_affinity.py  test_compose_run_config.py  test_encoding.py  test_lane_spots.py  test_mirror_opp.py  test_multilane.py  test_ppo_train_cli.py  test_protocol.py  test_run_configs.py  test_server_launcher.py  test_session.py  test_smoke.py  test_snapshot_pool.py  test_thread_vec_env.py  test_train_config.py
